--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script type="text/javascript" src="/script.js"></script>
     <title>!Motivacional</title>
+    <script type="text/javascript" src="script.js" defer></script>
+    <link href="/styles.css" rel="stylesheet" />
   </head>
   <body id="container">
     <div>
@@ -15,5 +16,4 @@
       <h3 id="message"></h3>
     </div>
   </body>
-  <link href="/styles.css" rel="stylesheet" />
 </html>
