--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
   <body id="container">
     <div>
       <h1>Leia sua frase do dia!</h1>
-      <button type="button" onclick="sendMessage()">Clique aqui</button>
+      <button id="button" type="button" onclick="sendMessage()">
+        Clique aqui
+      </button>
 
       <h3 id="message"></h3>
     </div>
