--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
     <script type="text/javascript" src="script.js" defer></script>
     <link href="styles.css" rel="stylesheet" />
   </head>
-  <body id="container">
-    <div>
-      <h1>Leia sua frase do dia!</h1>
+  <body>
+    <h1 id="logo">!Motivacional</h1>
+    <div id="container">
+      <h1>Tendo um dia bom?</h1>
       <button id="button" type="button" onclick="sendMessage()">
         Clique aqui
       </button>
